# Chat

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
ChatClient/: CMakeLists.txt  main.cpp
ChatNetworking/: CMakeLists.txt
ChatNetworking/include/ChatNetworking/: tcp_conection.h  tcp_server.h
ChatNetworking/include/ChatNetworking/client/: tcp_client.h
ChatNetworking/include/ChatNetworking/server/: tcp_conection.h  tcp_server.h
ChatNetworking/src/: tcp_conection.cpp  tcp_server.cpp
ChatNetworking/src/client/: tcp_client.cpp
ChatNetworking/src/server/: tcp_conection.cpp  tcp_server.cpp
ChatServer/: CMakeLists.txt  main.cpp
